--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,14 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_database: ^9.1.4
   firebase_storage: ^10.3.8
-  flutter_screenutil: ^5.5.4
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.5.4
+  flutter_svg: ^1.1.5
   flutterfire_ui: ^0.4.3+9
+  image_picker: ^0.8.5+3
+  path: ^1.8.2
+  path_provider: ^2.0.11
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
@@ -30,15 +34,20 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/avatar.jpg
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: Billabong
       fonts:
         - asset: assets/fonts/billabong.ttf
-        # - asset: fonts/Schyler-Italic.ttf
+          # - asset: fonts/Schyler-Italic.ttf
           # style: italic
+    - family: SfPro
+      fonts:
+        - asset: assets/fonts/sfpro/sf_pro.ttf
+        - asset: assets/fonts/sfpro/sf_pro_bold.ttf
+          style: normal
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
