--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,23 +20,28 @@ dependencies:
   flutter_screenutil: ^5.5.4
   flutter_svg: ^1.1.5
   flutterfire_ui: ^0.4.3+9
+  freezed_annotation: ^2.1.0
   image_picker: ^0.8.5+3
   path: ^1.8.2
   path_provider: ^2.0.11
+  permission_handler: ^10.0.0
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
 
 dev_dependencies:
+  build_runner: ^2.2.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.1.0+1
+  json_serializable: ^6.3.2
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/avatar.jpg
-  #   - images/a_dot_ham.jpeg
+    - assets/svg/
   fonts:
     - family: Billabong
       fonts:
