--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
+  cached_network_image: ^3.2.2
   cloud_firestore: ^3.4.8
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.9.0
@@ -22,6 +23,7 @@ dependencies:
   flutterfire_ui: ^0.4.3+9
   freezed_annotation: ^2.1.0
   image_picker: ^0.8.5+3
+  intl: ^0.17.0
   path: ^1.8.2
   path_provider: ^2.0.11
   permission_handler: ^10.0.0
