--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.11
   permission_handler: ^10.0.0
+  flutter_staggered_grid_view: ^0.6.2
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
