--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/icons/avatar.jpg
+    - assets/icons/
     - assets/svg/
   fonts:
     - family: Billabong
