--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
+  date_format: ^2.0.7
 
 dev_dependencies:
   build_runner: ^2.2.1
