--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
   date_format: ^2.0.7
+  story_view: ^0.13.2
+  get_it: ^7.2.0
 
 dev_dependencies:
   build_runner: ^2.2.1
