--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   date_format: ^2.0.7
   story_view: ^0.13.2
   get_it: ^7.2.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.2.1
