--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_database: ^9.1.4
   firebase_storage: ^10.3.8
+  firebase_messaging: ^13.1.0
+  flutter_local_notifications: ^12.0.1+1
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.5.4
