--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   story_view: ^0.13.2
   get_it: ^7.2.0
   device_preview: ^1.1.0
+  dio: ^4.0.6
 
 dev_dependencies:
   build_runner: ^2.2.1
